metadata-retriever/metadata/objects/PreOrder__c.object
<CustomObject>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Vehicle purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait time too long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Competitor Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Company, Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Orders</relationshipLabel>
        <relationshipName>PreOrders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleInterested__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vehicle Interested</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Pre-Orders</relationshipLabel>
        <relationshipName>PreOrders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Pre-Order</label>
    <nameField>
        <displayFormat>PO-{0000000}</displayFormat>
        <label>Pre-Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>